--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
 <header class="header">
-  <img src="../assets/logo.webp"> <h1>Task App</h1>
+  <img src="assets/logo.webp" />
+  <h1>Task App</h1>
 </header>
